--- a/src/main/FrontEnd/src/index.css
+++ b/src/main/FrontEnd/src/index.css
@@ -26,6 +26,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: #f9f9f9;
+  background-image: url('src/assets/imgs/MainBodyImage.png'); /* 이미지 URL을 넣으세요 */
+  background-size: cover; /* 이미지를 화면에 꽉 채우게 합니다 */
+  background-position: center; /* 이미지를 화면 가운데에 위치시킵니다 */
+  background-repeat: no-repeat; /* 이미지를 반복하지 않도록 설정합니다 */
 }
 
 h1 {
