--- a/src/main/FrontEnd/src/App.css
+++ b/src/main/FrontEnd/src/App.css
@@ -721,3 +721,9 @@ hello {
   font-weight: 900;
   font-style: italic;
 }
+.jua-regular {
+  font-family: "Jua", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
