--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -754,3 +754,13 @@ hello {
   font-weight: 400;
   font-style: normal;
 }
+
+.progress {
+  border-radius: 0;
+}
+
+.progress-indicator {
+  border-radius: 0;
+  background-color: #ef4444; /* red-500 */
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
